1. Add fragments, use current fragment on bottom nav view click 2. movie detail activity, adapter changes 3. layout, dimen, strings

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="small_margin">5dp</dimen>
+    <dimen name="medium_margin">10dp</dimen>
     <dimen name="large_padding">15dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
