--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+    <ImageView
+        android:id="@+id/movieImage"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:src="@mipmap/movie_image1"/>
 
     <TextView
         android:id="@+id/text"
